# mart

./: .gitignore  .pre-commit-config.yaml  README.md  map_art.py  pyproject.toml
src/mart/: setup.py
src/mart/scripts/: cli.py  map_artwork.py
