[tool.poetry]
name = "mart"
version = "0.1.0"
description = "Commands to create different types of art"
authors = ["Michael Ellis"]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.4.3"
numpy = "^1.23.0"
matplotlib = "^3.5.2"
osmnx = "^1.2.1"
networkx = "^2.8.4"
requests = "^2.32.0"

[tool.poetry.dev-dependencies]
black = "^24.3.0"
pytest = "^7.1.2"
mypy = "^0.961"
pylint = "^2.14.4"
pre-commit = "^2.19.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
